fix messages for collaborator and employee
